--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "vwx-design-system",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "description": "VW Xperience Design System - Automotive-inspired design system with AI integration",
   "scripts": {
     "dev": "pnpm --filter @vwx/components dev",
@@ -13,18 +14,43 @@
     "test": "pnpm --recursive test",
     "test:unit": "vitest",
     "test:e2e": "playwright test",
+    "test:coverage": "vitest run --coverage",
+    "test:watch": "vitest",
     "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
+    "format:check": "prettier --check \"**/*.{ts,tsx,json,md}\"",
     "typecheck": "tsc --noEmit",
+    "analyze:bundle": "node scripts/analyze-bundle.js",
+    "analyze:performance": "node scripts/performance-monitor.js",
+    "quality:check": "pnpm lint && pnpm typecheck && pnpm test:coverage",
+    "quality:fix": "pnpm lint:fix && pnpm format",
+    "lighthouse": "pnpm analyze:performance",
+    "bundle-size": "pnpm analyze:bundle",
+    "workflow": "node scripts/dev-workflow.js",
+    "workflow:quick": "node scripts/dev-workflow.js quick-check",
+    "workflow:full": "node scripts/dev-workflow.js full-check",
+    "workflow:setup": "node scripts/dev-workflow.js dev-setup",
+    "workflow:clean": "node scripts/dev-workflow.js clean-slate",
+    "workflow:release": "node scripts/dev-workflow.js release-prep",
+    "quality:report": "node scripts/quality-report.js",
     "prepare": "husky install"
   },
   "devDependencies": {
+    "@open-wc/testing": "^4.0.0",
+    "@playwright/test": "^1.40.0",
+    "@testing-library/dom": "^10.4.1",
+    "@testing-library/jest-dom": "^6.9.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
-    "@playwright/test": "^1.40.0",
     "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-security": "^3.0.1",
+    "eslint-plugin-sonarjs": "^3.0.5",
+    "happy-dom": "^19.0.2",
     "husky": "^8.0.0",
+    "jsdom": "^27.0.0",
     "lint-staged": "^15.0.0",
     "prettier": "^3.0.0",
     "typescript": "^5.2.0",
