--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -3,9 +3,7 @@
     "stylelint-config-standard-scss",
     "stylelint-config-prettier-scss"
   ],
-  "plugins": [
-    "stylelint-order"
-  ],
+  "plugins": ["stylelint-order"],
   "rules": {
     "selector-class-pattern": "^[a-z][a-zA-Z0-9]+$",
     "custom-property-pattern": "^vw-[a-z][a-zA-Z0-9-]+$",
