--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -14,7 +14,49 @@
       "name": "Debug Tests",
       "program": "${workspaceFolder}/node_modules/vitest/vitest.mjs",
       "args": ["run"],
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Single Test",
+      "program": "${workspaceFolder}/node_modules/vitest/vitest.mjs",
+      "args": ["run", "${relativeFile}"],
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug E2E Tests",
+      "program": "${workspaceFolder}/node_modules/@playwright/test/cli.js",
+      "args": ["test", "--headed"],
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "chrome",
+      "request": "launch",
+      "name": "Launch Playground",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}/apps/playground"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Bundle Analyzer",
+      "program": "${workspaceFolder}/scripts/analyze-bundle.js",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"]
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Performance Monitor",
+      "program": "${workspaceFolder}/scripts/performance-monitor.js",
+      "console": "integratedTerminal",
+      "skipFiles": ["<node_internals>/**"]
     }
   ]
 }
